# Virus-project-

./: .gitignore  MakeMorePt2.ipynb  Nureal_Network_First_Vod.ipynb  README.md
DeepLearningCommunityNotes/: MakeMorePt3.ipynb
Virus_project_files/: .gitignore  00_setup.sh  01_fasta_to_pq.py  02_mk_cv_folds.py  03_tune_model.ipynb  03_tune_model.py  04_train_model.ipynb  04_train_model.py  05_setup_combinations.ipynb  06_model_evaluation.ipynb  99_explore_model.ipynb  README.md  calculate_genotype_k_mer.py  environment.yml  predResult.py  predResultsNotebook.ipynb  train_mod.py
containers/: pyproject.toml  vp.def
hpc_scripts/03_tune_model/: 03_mk_tune_model_sbatchs.py
hpc_scripts/04_train_model/: 04_mk_train_model_sbatchs.py
hpc_scripts/99_visualize_results/: exploration_combinations.ipynb  explore.qmd
