[project]
name = "virus-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ax-platform>=0.4.3",
    "imblearn>=0.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
